--- a/index.html
+++ b/index.html
@@ -1,38 +1,77 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Gas Leak Dashboard</title>
-  <script src="https://unpkg.com/mqtt/dist/mqtt.min.js"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Gas Leak Detection Dashboard</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      text-align: center;
+      background-color: #e0f7e9;
+      transition: background-color 0.5s ease;
+    }
+    h1 {
+      font-size: 3rem;
+      margin-top: 40px;
+    }
+    #ppm-value {
+      font-size: 7rem;
+      font-weight: bold;
+      margin: 40px 0;
+      color: #333;
+    }
+    #timestamp {
+      font-size: 1.5rem;
+      color: #444;
+    }
+    #status {
+      font-size: 2rem;
+      margin-top: 20px;
+    }
+  </style>
 </head>
 <body>
-  <h2>🚨 Real-Time Gas Monitor</h2>
-  <p><b>Time:</b> <span id="time">--:--:--</span></p>
-  <p><b>PPM Value:</b> <span id="ppm">--</span></p>
-  <p><b>Status:</b> <span id="status">--</span></p>
+  <h1>Gas Leak Monitor</h1>
+  <div id="ppm-value">--</div>
+  <div id="timestamp">Waiting for data...</div>
+  <div id="status">Status: Normal</div>
 
+  <!-- MQTT over WebSockets -->
+  <script src="https://unpkg.com/mqtt/dist/mqtt.min.js"></script>
   <script>
+    const ppmDisplay = document.getElementById('ppm-value');
+    const timestampDisplay = document.getElementById('timestamp');
+    const statusDisplay = document.getElementById('status');
+
     const client = mqtt.connect("wss://broker.hivemq.com:8884/mqtt");
 
-    client.on("connect", function () {
-      console.log("✅ Connected to MQTT WebSocket");
+    client.on("connect", () => {
+      console.log("Connected to MQTT broker");
       client.subscribe("gasleak/data");
     });
 
-    client.on("message", function (topic, message) {
+    client.on("message", (topic, message) => {
       try {
-        let data = JSON.parse(message.toString());
-        document.getElementById("time").textContent = data.time;
-        document.getElementById("ppm").textContent = data.ppm;
+        const data = JSON.parse(message.toString());
+        const ppm = data.ppm;
+        const time = data.time;
 
-        if (data.ppm >= 200) {
-          document.getElementById("status").textContent = "⚠️ High Gas Level!";
-          document.getElementById("status").style.color = "red";
+        ppmDisplay.textContent = ppm + " PPM";
+        timestampDisplay.textContent = "Time: " + time;
+
+        if (ppm >= 200) {
+          document.body.style.backgroundColor = "#ffebee"; // light red
+          statusDisplay.textContent = "⚠️ ALERT: High Gas Detected!";
+          statusDisplay.style.color = "red";
         } else {
-          document.getElementById("status").textContent = "✅ Safe";
-          document.getElementById("status").style.color = "green";
+          document.body.style.backgroundColor = "#e0f7e9"; // light green
+          statusDisplay.textContent = "Status: Normal";
+          statusDisplay.style.color = "green";
         }
       } catch (e) {
-        console.error("❌ JSON parse error", e);
+        console.error("Error parsing MQTT message", e);
       }
     });
   </script>
